--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "tap": "~5.4.5",
-    "nave": "~0.5.0"
+    "nave": "^3.5.2"
   },
   "keywords": [
     "source",
