--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "url": "http://thlorenz.com"
   },
   "license": "MIT",
-  "engine": {
-    "node": ">=0.6"
+  "engines": {
+    "node": ">=10"
   }
 }
