--- a/.github/workflows/node-test.js.yml
+++ b/.github/workflows/node-test.js.yml
@@ -32,7 +32,6 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        # TODO: Enable cache when checking in package lockfile to git
-        # cache: 'npm'
+        cache: 'npm'
     - run: npm install
     - run: npm run test
